samples/_failures_safe/1761687715_b1f991_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0d1936b8.c: In function ‘main’:
./samples/SAFE/__tmp_0d1936b8.c:161:16: error: ‘BU’ undeclared (first use in this function)
  161 |     char input[BU
      |                ^~
./samples/SAFE/__tmp_0d1936b8.c:161:16: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_0d1936b8.c:161:18: error: expected ‘]’ at end of input
  161 |     char input[BU
      |                  ^
      |                  ]
./samples/SAFE/__tmp_0d1936b8.c:161:5: error: expected declaration or statement at end of input
  161 |     char input[BU
      |     ^~~~
